# practice

./: .gitignore  README.md
cpp/01-hello-world/: README.md  hello
cpp/02-sum/: CMakeLists.txt  main.cpp  test_sum.cpp
